# mesh-sdk

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  mesh_sdk.py  pyproject.toml
docs/: flow-loop-enhancements.md  flow_enhancements.md  spec.md
examples/: flow_import_export_example.py  run_platform.py  simple_agent.py  test_client.py  test_flow.py
mesh_agent/: __init__.py
mesh_agent/src/: exceptions.py  sdk.py
mesh_platform/: __init__.py
mesh_platform/src/: __main__.py  flow_engine.py  platform.py  redis_client.py
mesh_sdk/: __init__.py
mesh_sdk/mesh_agent/src/: __init__.py
mesh_sdk/mesh_platform/src/: __init__.py  platform.py
tests/: __init__.py  test_agent_sdk.py  test_platform.py
