[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh-sdk"
version = "0.1.0"
description = "Agent Mesh SDK for ACP protocol integration"
authors = [
    {name = "Mesh SDK Team", email = "team@mesh-sdk.dev"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["agent", "acp", "protocol", "mesh", "orchestration", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.12"
dependencies = [
    "acp-sdk",
    "portpicker",
    "requests",
    "redis",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/mesh-sdk/mesh-sdk"
Documentation = "https://github.com/mesh-sdk/mesh-sdk/blob/main/docs/"
Repository = "https://github.com/mesh-sdk/mesh-sdk"
Issues = "https://github.com/mesh-sdk/mesh-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["mesh_platform", "mesh_agent"]
include = ["mesh_sdk.py"]

[project.scripts]
mesh-platform = "mesh_platform.src.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "COM812", "ISC001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]